--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -27,6 +27,13 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.boofcv</groupId>
+			<artifactId>boofcv-swing</artifactId>
+			<version>0.40.1</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
