--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,14 @@
     "@babel/core": "^7.20.12",
     "@popperjs/core": "^2.11.6",
     "axios": "^1.3.3",
+    "p5": "^1.6.0",
     "path": "^0.12.7",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@types/node": "^18.14.0",
+    "@types/p5": "^1.6.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "typescript": "^4.9.5",
     "vite": "^4.1.3",
